# reel_check

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  agent_info.json  ai_core.py  autobuild_basic.py  celery_worker.py  database.py  main.py  oauth2.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: authentication.py  user.py  websocket.py
backend/app/core/: jwt_token.py  oauth2.py
backend/app/db/: session.py
backend/app/models/: schemas.py
backend/app/services/: ai_core.py
backend/app/worker/: celery_worker.py
backend/misc/: autobuild_basic.ipynb  project.md  save_config_67e59b8f8c4b47607df4c4f0171a7f58.json
backend/routers/: authentication.py  user.py  websocket.py
backend/tests/: test_main.py
extension/: README.md  manifest.json  package.json  project.md
extension/public/: index.html
extension/src/: App.js
extension/src/api/: api.js
extension/src/components/: Dashboard.js  History.js  LoadingProgress.js  LoadingSpinner.js
extension/src/components/Auth/: AuthForm.js  Login.js  Signup.js
extension/src/contexts/: AuthContext.js  ThemeContext.js
