[project]
name = "agent-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2[gemini]>=0.9.7",
    "arxiv>=2.2.0",
    "autogen>=0.9.7",
    "autogen-agentchat[autobuild,gemini]>=0.7.1",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "fastapi-limiter[redis]>=0.1.6",
    "google-api-python-client>=2.177.0",
    "google-genai>=1.28.0",
    "httpx>=0.28.1",
    "openai-whisper>=20250625",
    "opencv-python>=4.12.0.88",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "vertexai>=1.71.1",
    "yt-dlp>=2025.7.21",
    "tesseract>=0.1.3",
]
